--- a/locales/en-US.resx
+++ b/locales/en-US.resx
@@ -60,7 +60,7 @@ If you do not trust us, you can secure your safety by removing your channel perm
     <value>word</value>
   </data>
   <data name="defaultLanguage">
-    <value>defaultLanguage</value>
+    <value>default language</value>
   </data>
   <data name="button">
     <value>button</value>
@@ -78,7 +78,7 @@ If you do not trust us, you can secure your safety by removing your channel perm
     <value>Finished action.</value>
   </data>
   <data name="showMediaInEmbedsImage">
-    <value>ShowMediaInEmbedsImage</value>
+    <value>Show media in embeds image</value>
   </data>
   <data name="showMediaAsAttachments">
     <value>show media as attachments</value>
@@ -270,13 +270,13 @@ If you do not trust us, you can secure your safety by removing your channel perm
     <value>always reply if posted tweetlink</value>
   </data>
   <data name="extractBotMessage">
-    <value>extractBotMessage</value>
+    <value>extract bot message</value>
   </data>
   <data name="showAttachmentsAsEmbedsImage">
     <value>show attachments as embeds image</value>
   </data>
   <data name="setsWhetherToExpandQuoteRetweets">
-    <value>SetsWhetherToExpandQuoteRetweets.</value>
+    <value>Sets whether to expand quote retweets.</value>
   </data>
   <data name="doNotDeployQuoteRetweets">
     <value>Do not deploy quote retweets</value>
