--- a/locales/en-US.resx
+++ b/locales/en-US.resx
@@ -186,13 +186,13 @@ If you do not trust us, you can secure your safety by removing your channel perm
     <value>Sets whether to always reply if the tweet link is posted.</value>
   </data>
   <data name="setsEndMediaAsAttachmentsAsDefaultTo">
-    <value>Set sendMediaAsAttachmentsAsDefault to </value>
+    <value>Set sendMediaAsAttachmentsAsDefault to</value>
   </data>
   <data name="setDEleteIfOnlyPostedTweetLinkTo">
-    <value>Set deleteIfOnlyPostedTweetLink to </value>
+    <value>setdeleteifonlypostedtweetlinkto</value>
   </data>
   <data name="setALwaysReplyIfPostedTweetLinkTo">
-    <value>Set alwaysReplyIfPostedTweetLink to </value>
+    <value>setalwaysreplyifpostedtweetlinkto</value>
   </data>
   <data name="disabledAllButtons">
     <value>Disabled all buttons.</value>
@@ -255,7 +255,7 @@ If you do not trust us, you can secure your safety by removing your channel perm
     <value>Removed role from button_disabled.role.</value>
   </data>
   <data name="setsWhetherToExtractBotMessages">
-    <value>Sets whether to extract bot messages.</value>
+    <value>setswhethertoextractbotmessages.</value>
   </data>
   <data name="setExtractBotMessageTo">
     <value>Set extractBotMessage to </value>
