--- a/locales/ja.resx
+++ b/locales/ja.resx
@@ -281,4 +281,7 @@
   <data name="doNotDeployQuoteRetweets">
     <value>引用リツイートを展開しない</value>
   </data>
+  <data name="reload">
+    <value>再読み込み</value>
+  </data>
 </root>
